# epsilon

./: .gitignore  Cargo.toml  PKGBUILD  README.md  example.jsonc  example.yaml  run-isolated.sh
i18n/en/: Epsilon.ftl
i18n/fr/: Epsilon.ftl
i18n/pl/: Epsilon.ftl
i18n/sv/: Epsilon.ftl
src/: Cargo.toml  args.rs  build.rs.old  main.rs
src/i18n/bn/: Epsilon.ftl
src/i18n/de/: Epsilon.ftl
src/i18n/en/: Epsilon.ftl
src/i18n/es/: Epsilon.ftl
src/i18n/fr/: Epsilon.ftl
src/i18n/hi/: Epsilon.ftl
src/i18n/it/: Epsilon.ftl
src/i18n/pl/: Epsilon.ftl
src/i18n/pt_BR/: Epsilon.ftl
src/i18n/ru/: Epsilon.ftl
src/i18n/sv/: Epsilon.ftl
src/i18n/uk/: Epsilon.ftl
src/internal/: utils.rs
src/logging/: fmt_layer.rs
src/src/: args.rs  main.rs
src/src/builder/: mod.rs  mount.rs  pacman.rs
src/src/interact/: select.rs
src/src/internal/: alpm.rs  config.rs  exit_code.rs  i18n.rs  mod.rs  structs.rs  utils.rs
src/src/manifest/: model.rs
src/src/operations/: clean.rs  manifest.rs  mod.rs  search.rs  strap.rs  sync.rs  uninstall.rs  upgrade.rs
